<resources>
    <string name="app_name">TestHelper</string>
    <string name="title_qr">QR</string>
    <string name="title_home">Home</string>
    <string name="device_info_title">Информация об устройстве</string>
    <string name="qr_help_title">QR</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error_message_empty_field">Field is empty.</string>
    <string name="mail">Mail</string>
    <string name="password_again">Password again</string>
    <string name="registration">Register</string>
    <string name="error_message_passwords_no_not_match">Passwords do not match</string>
    <string name="sign_up">Sign Up</string>
    <string name="chat_list">Chats</string>
    <string name="message">Message...</string>
    <string name="btn_send">Send</string>
    <string name="btn_join_to_chat">Join</string>
    <string name="chat_id">chatId</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>
</resources>